<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="fill_parent"
    android:background="@drawable/bluebackground" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView3"
        android:src="@drawable/taskericon"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textView17"
        android:layout_marginTop="38dp"
        android:layout_alignTop="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date :"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/date"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/dialogPrice"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/textView17"
        android:layout_toRightOf="@+id/textView17"
        android:layout_toEndOf="@+id/textView17"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textColor="@color/white"
        android:id="@+id/dialogDate"
        android:layout_alignBottom="@+id/date"
        android:layout_alignLeft="@+id/dialogPrice"
        android:layout_alignStart="@+id/dialogPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textView16"
        android:layout_below="@+id/imageView3"
        android:layout_alignLeft="@+id/dialogDescription"
        android:layout_alignStart="@+id/dialogDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textColor="@color/white"
        android:id="@+id/dialogDescription"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/buttonTaskBack"
        android:layout_alignStart="@+id/buttonTaskBack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textView18"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/dialogDescription"
        android:layout_alignLeft="@+id/dialogDescription"
        android:layout_alignStart="@+id/dialogDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="location"
        android:id="@+id/dialogLocation"
        android:textColor="@color/white"
        android:paddingLeft="15dp"
        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_toLeftOf="@+id/dialogDate"
        android:layout_toStartOf="@+id/dialogDate" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/Back"
        android:id="@+id/buttonTaskBack"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/default_button"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="0"
        android:shadowDy="0"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/dialogLocation"
        android:layout_toLeftOf="@+id/date"
        android:layout_toStartOf="@+id/date" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/Accept"
        android:id="@+id/buttonTaskAccept"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/green_button"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="0"
        android:shadowDy="0"
        android:layout_alignTop="@+id/buttonTaskBack"
        android:layout_toRightOf="@+id/date"
        android:layout_toEndOf="@+id/date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User :"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textView19"
        android:layout_below="@+id/date"
        android:layout_toRightOf="@+id/buttonTaskBack"
        android:layout_toEndOf="@+id/buttonTaskBack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textColor="@color/white"
        android:id="@+id/dialogUserText"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignLeft="@+id/dialogDate"
        android:layout_alignStart="@+id/dialogDate" />

</RelativeLayout>